Added new images to About.html

--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
     <!-- Summer and Nature Card Section (side by side) -->
     <div class="container mb-5">
         <div class="row justify-content-center">
-            <div class="col-md-6 col-lg-5 mb-4 mb-md-0">
+            <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
                     <img src="assets/images/summer.jpg" class="card-img-top" alt="Summer Travel" style="height: 250px; object-fit: cover;">
                     <div class="card-body">
@@ -131,13 +131,57 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-5">
+            <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
                     <img src="assets/images/never.gif" class="card-img-top" alt="Nature Travel" style="height: 250px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Reconnect With Nature</h5>
                         <p class="card-text">
-                            Discover breathtaking landscapes and serene escapes with Easy Travel’s nature packages. From lush forests to majestic mountains, our curated trips let you experience the beauty and tranquility of the natural world. Let us guide you to your next adventure in nature!
+                            Discover breathtaking landscapes and serene escapes with Easy Travel's nature packages. From lush forests to majestic mountains, our curated trips let you experience the beauty and tranquility of the natural world. Let us guide you to your next adventure in nature!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+                <div class="card shadow h-100">
+                    <img src="assets/images/safari.gif" class="card-img-top" alt="Safari Adventure" style="height: 250px; object-fit: cover;">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color: purple;">Safari Adventures</h5>
+                        <p class="card-text">
+                            Experience the thrill of the wild with our exclusive safari packages. Witness magnificent wildlife in their natural habitats, traverse stunning landscapes, and immerse yourself in local cultures. Our expert guides ensure safe, educational, and unforgettable safari experiences for adventurers of all ages.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+                <div class="card shadow h-100">
+                    <img src="assets/images/playa.gif" class="card-img-top" alt="Beach Destinations" style="height: 250px; object-fit: cover;">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color: purple;">Beach Paradise</h5>
+                        <p class="card-text">
+                            Escape to pristine beaches and crystal-clear waters with our beach vacation packages. From secluded tropical islands to vibrant coastal towns, we offer perfect getaways for relaxation and rejuvenation. Enjoy sun-soaked days, spectacular sunsets, and unforgettable beachside experiences with Easy Travel.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+                <div class="card shadow h-100">
+                    <img src="assets/images/national-park.gif" class="card-img-top" alt="National Parks" style="height: 250px; object-fit: cover;">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color: purple;">National Park Wonders</h5>
+                        <p class="card-text">
+                            Explore the magnificent beauty of national parks with our specialized tour packages. From awe-inspiring canyons to ancient forests, experience the diverse ecosystems and remarkable landscapes protected within these natural treasures. Our guided tours offer the perfect blend of adventure, education, and conservation awareness.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card shadow h-100">
+                    <img src="assets/images/vallarta.gif" class="card-img-top" alt="Puerto Vallarta" style="height: 250px; object-fit: cover;">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color: purple;">Puerto Vallarta Getaways</h5>
+                        <p class="card-text">
+                            Discover the charm of Puerto Vallarta with our customized vacation packages. Experience the perfect blend of beautiful beaches, vibrant culture, and spectacular sunsets. From luxury resorts to authentic local experiences, our Puerto Vallarta tours offer something for every traveler seeking the magic of Mexico's Pacific coast.
                         </p>
                     </div>
                 </div>
