--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
-                    <img src="assets/images/summer.jpg" class="card-img-top" alt="Summer Travel" style="height: 250px; object-fit: cover;">
+                    <img src="assets/images/Playa.gifard-img-top" alt="Summer Travel" style="height: 250px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Enjoy Your Summer With Us!</h5>
                         <p class="card-text">
