Amended attribute values

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <!--header section-->
     <section class="d-flex justify-content-center align-items-center text-center"
-        style="height: 200vh; background: url('assets/images/solo.png') no-repeat center center; background-size: cover;">
+        style="height: 200vh; background: url(&quot;assets/images/solo.png&quot;) no-repeat center center; background-size: cover;">
         <div>
             <h1 class="display-4" style="color: red; font-weight: bold">Welcome to Easy Travel</h1>
             <p class="lead" style="color: orangered; font-weight: bold;">We are here to offer you an Excellent service.
