--- a/about.html
+++ b/about.html
@@ -12,47 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        html,
-        body {
-            max-width: 100vw;
-            overflow-x: hidden !important;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            box-sizing: border-box;
-        }
-
-        section,
-        footer,
-        nav,
-        .container,
-        .row,
-        .col-12 {
-            box-sizing: border-box;
-        }
-
-        /* Remove default padding from container-fluid */
-        .container-fluid {
-            padding-left: 0 !important;
-            padding-right: 0 !important;
-            margin-left: 0 !important;
-            margin-right: 0 !important;
-            width: 100% !important;
-        }
-
-        /* For full width sections */
-        .full-width-section {
-            width: 100vw;
-            position: relative;
-            left: 50%;
-            right: 50%;
-            margin-left: -50vw;
-            margin-right: -50vw;
-        }
-    </style>
+    
 </head>
 
 <body style="overflow-x: hidden; width: 100vw; margin: 0; padding: 0;">
@@ -61,7 +21,7 @@
             <a class="navbar-brand" href="#">
                 <img src="assets/images/logo-easy-travel.jpg" alt="Easy Travel Logo" width="30" height="30"
                     class="d-inline-block align-text-top">
-                <span style="color: purple;">Easy Travel</span>
+                <span style="color: purple;">Easy Travel Company Logo</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
