--- a/contact.html
+++ b/contact.html
@@ -10,26 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <style>
-        html,
-        body {
-            max-width: 100vw;
-            overflow-x: hidden !important;
-        }
-
-        body {
-            box-sizing: border-box;
-        }
-
-        section,
-        footer,
-        nav,
-        .container,
-        .row,
-        .col-12 {
-            box-sizing: border-box;
-        }
-    </style>
 </head>
 
 <body>
@@ -39,7 +19,7 @@
             <a class="navbar-brand" href="#">
                 <img src="assets/images/logo-easy-travel.jpg" alt="Easy Travel Logo" width="30" height="30"
                     class="d-inline-block align-text-top">
-                <span style="color: purple;">Easy Travel</span>
+                <span style="color: purple;">Easy Travel Company Logo</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,22 +68,22 @@
 
                 <form>
                     <div class="mb-3">
-                        <label for="name" class="form-label">Name</label>
+                        <label for="name" class="form-label" style="width: 50px; display: inline-block;">Name</label>
                         <input type="text" class="form-control" id="name" placeholder="Enter your name" required
                             style="border: 2px solid purple; font-weight: bold;">
                     </div>
                     <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
+                        <label for="email" class="form-label" style="width: 80px; display: inline-block;">Email</label>
                         <input type="email" class="form-control" id="email" placeholder="Enter your email" required
                             style="border: 2px solid purple; font-weight: bold;">
                     </div>
                     <div class="mb-3">
-                        <label for="subject" class="form-label">Subject</label>
+                        <label for="subject" class="form-label" style="width: 500px; display: inline-block;">Subject</label>
                         <input type="text" class="form-control" id="subject" placeholder="Enter the subject" required
                             style="border: 2px solid purple; font-weight: bold;">
                     </div>
                     <div class="mb-3">
-                        <label for="phone" class="form-label">Phone</label>
+                        <label for="phone" class="form-label" style="width: 50px; display: inline-block;">Phone</label>
                         <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number"
                             style="border: 2px solid purple; font-weight: bold;">
                     </div>
