--- a/about.html
+++ b/about.html
@@ -12,7 +12,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    
+    <style>
+        /* ...existing styles... */
+        .card-price-tooltip {
+            display: none;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: rgba(128, 0, 128, 0.95);
+            color: #fff;
+            padding: 8px 16px;
+            border-radius: 8px;
+            font-weight: bold;
+            z-index: 10;
+            pointer-events: none;
+            font-size: 1.1rem;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+        }
+        .card:hover .card-price-tooltip {
+            display: block;
+            animation: fadeIn 0.2s;
+        }
+        .card {
+            position: relative;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-10px);}
+            to { opacity: 1; transform: translateY(0);}
+        }
+    </style>
 </head>
 
 <body style="overflow-x: hidden; width: 100vw; margin: 0; padding: 0;">
@@ -82,6 +110,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
+                    <span class="card-price-tooltip">$799, pp, 7 nights including flight</span>
                     <img src="assets/images/playa.gif" class="card-img-top" alt="Summer Travel" style="height: 250px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Enjoy Your Summer With Us!</h5>
@@ -93,6 +122,7 @@
             </div>
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
+                    <span class="card-price-tooltip">$899, pp, 7 nights including flight</span>
                     <img src="assets/images/never.gif" class="card-img-top" alt="Nature Travel" style="height: 250px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Reconnect With Nature</h5>
@@ -104,6 +134,7 @@
             </div>
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
+                    <span class="card-price-tooltip">$1,299, pp, 7 nights including flight</span>
                     <img src="assets/images/safari.gif" class="card-img-top" alt="Safari Adventure" style="height: 250px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Safari Adventures</h5>
@@ -115,6 +146,7 @@
             </div>
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
+                    <span class="card-price-tooltip">$999, pp, 7 nights including flight</span>
                     <img src="assets/images/playa.gif" class="card-img-top" alt="Beach Destinations" style="height: 250px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Beach Paradise</h5>
@@ -126,6 +158,7 @@
             </div>
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
+                    <span class="card-price-tooltip">$1,099pp, 7 nights including flight</span>
                     <img src="assets/images/national-park.gif" class="card-img-top" alt="National Parks" style="height: 250px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">National Park Wonders</h5>
@@ -137,6 +170,7 @@
             </div>
             <div class="col-md-6 col-lg-3">
                 <div class="card shadow h-100">
+                    <span class="card-price-tooltip">$1,199pp, 7 nights including flight</span>
                     <img src="assets/images/vallarta.gif" class="card-img-top" alt="Puerto Vallarta" style="height: 250px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Puerto Vallarta Getaways</h5>
