Changed colours of the text

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         style="height: 100vh; background: url('assets/images/customer.gif') no-repeat center center; background-size: cover;">
         <div>
             <h1 class="display-4" style="color: red; font-weight: bold;">Welcome Our Customer Service Team</h1>
-            <p class="lead" style="color: rebeccapurple; font-weight: bold;">Great customer service is about exceeding
+            <p class="lead" style="color: red; font-weight: bold;">Great customer service is about exceeding
                 expectations with empathy and efficiency.
             </p>
             <a href="#contact" class="btn btn-light btn-lg mt-3">Contact Us</a>
