--- a/reservations.html
+++ b/reservations.html
@@ -51,7 +51,7 @@
             style="height: 100vh; background: url('assets/images/reservation.jpg') no-repeat center center; background-size: cover;">
             <div>
                 <h1 class="display-4" style="color: red; font-weight: bold;">Welcome to our Reservation Team</h1>
-                <p class="lead" style="color: rebeccapurple; font-weight: bold;">We are here to offer you a great
+                <p class="lead" style="color: red; font-weight: bold;">We are here to offer you a great
                     service.
                 </p>
                 <a href="#reservetions" class="btn btn-light btn-lg mt-3">Contact Us</a>
