--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         style="height: 200vh; background: url(&quot;assets/images/solo.png&quot;) no-repeat center center; background-size: cover;">
         <div>
             <h1 class="display-4" style="color: red; font-weight: bold">Welcome to Easy Travel</h1>
-            <p class="lead" style="color: orangered; font-weight: bold;">We are here to offer you an Excellent service.
+            <p class="lead" style="color: red; font-weight: bold;">We are here to offer you an Excellent service.
             </p>
-            <p class="lead" style="color: orangered; font-weight: bold;">For Bookings, please viste our Reservations
+            <p class="lead" style="color: red; font-weight: bold;">For Bookings, please viste our Reservations
                 page</p>
             <a href="#contact" class="btn btn-light btn-lg mt-3">Contact Us</a>
         </div>
