--- a/contact.html
+++ b/contact.html
@@ -64,28 +64,28 @@
             <div class="card shadow p-4">
                 <h2 class="text-center mb-4" style="color: purple;">Contact Us</h2>
                 <p style="color: purple;"><strong>Feel free to reach out to us for any inquiries, feedback, or
-                        assistance—we’re here to help!</strong></p>
+                        assistance, we’re here to help!</strong></p>
 
                 <form>
                     <div class="mb-3">
-                        <label for="name" class="form-label" style="width: 100px; display: inline-block;">Name</label>
+                        <label for="name" class="form-label" style="width: 100px; display: inline-block;">Full Name</label>
                         <input type="text" class="form-control" id="name" placeholder="Enter your name" required
-                            style="border: 2px solid purple; font-weight: bold;">
+                            style="border: 2px solid purple; font-weight: bold; max-width: 250px; display: inline-block;">
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label" style="width: 100px; display: inline-block;">Email</label>
                         <input type="email" class="form-control" id="email" placeholder="Enter your email" required
-                            style="border: 2px solid purple; font-weight: bold;">
+                            style="border: 2px solid purple; font-weight: bold; max-width: 250px; display: inline-block;">
                     </div>
                     <div class="mb-3">
                         <label for="subject" class="form-label" style="width: 100px; display: inline-block;">Subject</label>
                         <input type="text" class="form-control" id="subject" placeholder="Enter the subject" required
-                            style="border: 2px solid purple; font-weight: bold;">
+                            style="border: 2px solid purple; font-weight: bold; max-width: 250px; display: inline-block;">
                     </div>
                     <div class="mb-3">
                         <label for="phone" class="form-label" style="width: 100px; display: inline-block;">Phone</label>
                         <input type="tel" class="form-control" id="phone" placeholder="Enter your phone number"
-                            style="border: 2px solid purple; font-weight: bold;">
+                            style="border: 2px solid purple; font-weight: bold; max-width: 250px; display: inline-block;">
                     </div>
                     <div class="mb-3">
                         <label for="message" class="form-label">Message</label>
