Fixed images in the about.html file

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
                     <span class="card-price-tooltip">$799, pp, 7 nights including flight</span>
-                    <img src="assets/images/playa.gif" class="card-img-top" alt="Summer Travel" style="height: 250px; object-fit: cover;">
+                    <img src="assets/images/playa.gif" class="card-img-top" alt="Summer Travel" style="height: 250px; width: 100%; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Enjoy Your Summer With Us!</h5>
                         <p class="card-text">
@@ -123,7 +123,7 @@
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
                     <span class="card-price-tooltip">$899, pp, 7 nights including flight</span>
-                    <img src="assets/images/never.gif" class="card-img-top" alt="Nature Travel" style="height: 250px; object-fit: cover;">
+                    <img src="assets/images/never.gif" class="card-img-top" alt="Nature Travel" style="height: 250px; width: 100%; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Reconnect With Nature</h5>
                         <p class="card-text">
@@ -135,7 +135,7 @@
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
                     <span class="card-price-tooltip">$1,299, pp, 7 nights including flight</span>
-                    <img src="assets/images/safari.gif" class="card-img-top" alt="Safari Adventure" style="height: 250px; object-fit: cover;">
+                    <img src="assets/images/safari.gif" class="card-img-top" alt="Safari Adventure" style="height: 250px; width: 100%; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Safari Adventures</h5>
                         <p class="card-text">
@@ -147,7 +147,7 @@
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
                     <span class="card-price-tooltip">$999, pp, 7 nights including flight</span>
-                    <img src="assets/images/playa.gif" class="card-img-top" alt="Beach Destinations" style="height: 250px; object-fit: cover;">
+                    <img src="assets/images/playa.gif" class="card-img-top" alt="Beach Destinations" style="height: 250px; width: 100%; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Beach Paradise</h5>
                         <p class="card-text">
@@ -159,7 +159,7 @@
             <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
                 <div class="card shadow h-100">
                     <span class="card-price-tooltip">$1,099pp, 7 nights including flight</span>
-                    <img src="assets/images/national-park.gif" class="card-img-top" alt="National Parks" style="height: 250px; object-fit: cover;">
+                    <img src="assets/images/national-park.gif" class="card-img-top" alt="National Parks" style="height: 250px; width: 100%; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">National Park Wonders</h5>
                         <p class="card-text">
@@ -171,7 +171,7 @@
             <div class="col-md-6 col-lg-3">
                 <div class="card shadow h-100">
                     <span class="card-price-tooltip">$1,199pp, 7 nights including flight</span>
-                    <img src="assets/images/vallarta.gif" class="card-img-top" alt="Puerto Vallarta" style="height: 250px; object-fit: cover;">
+                    <img src="assets/images/vallarta.gif" class="card-img-top" alt="Puerto Vallarta" style="height: 250px; width: 100%; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Puerto Vallarta Getaways</h5>
                         <p class="card-text">
