--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
                     <span class="card-price-tooltip">$799, pp, 7 nights including flight</span>
                     <img src="assets/images/playa.gif" class="card-img-top" alt="Summer Travel" style="height: 250px; width: 100%; object-fit: cover;">
                     <div class="card-body">
-                        <h5 class="card-title" style="color: purple;">Enjoy Your Summer With Us!</h5>
+                        <h5 class="card-title" style="color: purple;">Enjoy Your Summer With Us!. Hover over the image to reveal the price</h5>
                         <p class="card-text">
                             Make this summer unforgettable with Easy Travel. Whether you dream of relaxing on sun-kissed beaches, exploring vibrant cities, or embarking on thrilling adventures, our summer packages are designed for every traveler. Let us handle the details while you soak up the sun and create lasting memories.
                         </p>
@@ -125,7 +125,7 @@
                     <span class="card-price-tooltip">$899, pp, 7 nights including flight</span>
                     <img src="assets/images/never.gif" class="card-img-top" alt="Nature Travel" style="height: 250px; width: 100%; object-fit: cover;">
                     <div class="card-body">
-                        <h5 class="card-title" style="color: purple;">Reconnect With Nature</h5>
+                        <h5 class="card-title" style="color: purple;">Reconnect With Nature. Hover over the image to reveal the price</h5>
                         <p class="card-text">
                             Discover breathtaking landscapes and serene escapes with Easy Travel's nature packages. From lush forests to majestic mountains, our curated trips let you experience the beauty and tranquility of the natural world. Let us guide you to your next adventure in nature!
                         </p>
@@ -137,7 +137,7 @@
                     <span class="card-price-tooltip">$1,299, pp, 7 nights including flight</span>
                     <img src="assets/images/safari.gif" class="card-img-top" alt="Safari Adventure" style="height: 250px; width: 100%; object-fit: cover;">
                     <div class="card-body">
-                        <h5 class="card-title" style="color: purple;">Safari Adventures</h5>
+                        <h5 class="card-title" style="color: purple;">Safari Adventures. Hover over the image to reveal the price</h5>
                         <p class="card-text">
                             Experience the thrill of the wild with our exclusive safari packages. Witness magnificent wildlife in their natural habitats, traverse stunning landscapes, and immerse yourself in local cultures. Our expert guides ensure safe, educational, and unforgettable safari experiences for adventurers of all ages.
                         </p>
@@ -149,7 +149,7 @@
                     <span class="card-price-tooltip">$999, pp, 7 nights including flight</span>
                     <img src="assets/images/playa.gif" class="card-img-top" alt="Beach Destinations" style="height: 250px; width: 100%; object-fit: cover;">
                     <div class="card-body">
-                        <h5 class="card-title" style="color: purple;">Beach Paradise</h5>
+                        <h5 class="card-title" style="color: purple;">Beach Paradise. Hover over the image to reveal the priceUpdated text in about.html page</h5>
                         <p class="card-text">
                             Escape to pristine beaches and crystal-clear waters with our beach vacation packages. From secluded tropical islands to vibrant coastal towns, we offer perfect getaways for relaxation and rejuvenation. Enjoy sun-soaked days, spectacular sunsets, and unforgettable beachside experiences with Easy Travel.
                         </p>
