updated the borders of the cards in the reservations page

--- a/reservations.html
+++ b/reservations.html
@@ -303,9 +303,14 @@
                             <img src="assets/images/playa.gif" alt="Playa" class="img-fluid mb-4"
                                 style="max-width: 100%; height: auto;">
                         </div>
-                        <h2 class="mb-0" style="color: purple;">Explore the World</h2>
-                        <img src="assets/images/national-park.gif" alt="National Park" class="img-fluid"
-                            style="max-width: 100%; height: auto;">
+                        <!-- Moved Relax by the side of this Extraordinary Waterfall card here -->
+                        <div
+                            style="border: 3px dashed #800080; border-radius: 14px; padding: 12px; margin: 18px 0; background: #f6f3ff;">
+                            <p style="color: purple; font-weight: bold;"><strong>Relax by the side of this Extraordinary
+                                    Waterfall, 7 Nights from 899.00 pp, including flight and hotel</strong></p>
+                            <img src="assets/images/never.gif" alt="Never" class="img-fluid"
+                                style="max-width: 100%; height: 485px; width: auto;">
+                        </div>
                     </div>
                     <!-- Right Column -->
                     <div class="col-md-6 text-center">
@@ -342,14 +347,6 @@
                                     Sands in Maldives, 7 Nights from £1199.00 pp, including flight and hotel</strong>
                             </p>
                             <img src="assets/images/Vallarta.gif" alt="Vallarta" class="img-fluid"
-                                style="max-width: 100%; height: 300px; width: auto;">
-                        </div>
-                        <!-- Relax by the side of this Extraordinary Waterfall card -->
-                        <div
-                            style="border: 3px dashed #800080; border-radius: 14px; padding: 12px; margin: 18px 0; background: #f6f3ff;">
-                            <p style="color: purple; font-weight: bold;"><strong>Relax by the side of this Extraordinary
-                                    Waterfall, 7 Nights from 899.00 pp, including flight and hotel</strong></p>
-                            <img src="assets/images/never.gif" alt="Never" class="img-fluid"
                                 style="max-width: 100%; height: 300px; width: auto;">
                         </div>
                     </div>
