Fixed about us page

--- a/about.html
+++ b/about.html
@@ -115,7 +115,9 @@
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Enjoy Your Summer With Us!. Hover over the image to reveal the price</h5>
                         <p class="card-text">
-                            Make this summer unforgettable with Easy Travel. Whether you dream of relaxing on sun-kissed beaches, exploring vibrant cities, or embarking on thrilling adventures, our summer packages are designed for every traveler. Let us handle the details while you soak up the sun and create lasting memories.
+                            Make this summer unforgettable with Easy Travel. Whether you dream of relaxing on sun-kissed beaches, exploring vibrant cities,
+                            or embarking on thrilling adventures, our summer packages are designed for every traveler. Let us handle the details while you
+                            soak up the sun and create lasting memories.
                         </p>
                     </div>
                 </div>
@@ -127,7 +129,8 @@
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Reconnect With Nature. Hover over the image to reveal the price</h5>
                         <p class="card-text">
-                            Discover breathtaking landscapes and serene escapes with Easy Travel's nature packages. From lush forests to majestic mountains, our curated trips let you experience the beauty and tranquility of the natural world. Let us guide you to your next adventure in nature!
+                            Discover breathtaking landscapes and serene escapes with Easy Travel's nature packages. From lush forests to majestic mountains,
+                            our curated trips let you experience the beauty and tranquility of the natural world. Let us guide you to your next adventure in nature!
                         </p>
                     </div>
                 </div>
@@ -139,7 +142,9 @@
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Safari Adventures. Hover over the image to reveal the price</h5>
                         <p class="card-text">
-                            Experience the thrill of the wild with our exclusive safari packages. Witness magnificent wildlife in their natural habitats, traverse stunning landscapes, and immerse yourself in local cultures. Our expert guides ensure safe, educational, and unforgettable safari experiences for adventurers of all ages.
+                            Experience the thrill of the wild with our exclusive safari packages. Witness magnificent wildlife in their natural habitats,
+                            traverse stunning landscapes, and immerse yourself in local cultures. Our expert guides ensure safe, educational,
+                            and unforgettable safari experiences for adventurers of all ages.
                         </p>
                     </div>
                 </div>
@@ -151,7 +156,8 @@
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Beach Paradise. Hover over the image to reveal the priceUpdated text in about.html page</h5>
                         <p class="card-text">
-                            Escape to pristine beaches and crystal-clear waters with our beach vacation packages. From secluded tropical islands to vibrant coastal towns, we offer perfect getaways for relaxation and rejuvenation. Enjoy sun-soaked days, spectacular sunsets, and unforgettable beachside experiences with Easy Travel.
+                            Escape to pristine beaches and crystal-clear waters with our beach vacation packages. From secluded tropical islands to vibrant coastal towns,
+                            we offer perfect getaways for relaxation and rejuvenation. Enjoy sun-soaked days, spectacular sunsets, and unforgettable beachside experiences with Easy Travel.
                         </p>
                     </div>
                 </div>
@@ -163,7 +169,9 @@
                     <div class="card-body">
                         <h5 class="card-title" style="color: purple;">Puerto Vallarta Getaways</h5>
                         <p class="card-text">
-                            Discover the charm of Puerto Vallarta with our customized vacation packages. Experience the perfect blend of beautiful beaches, vibrant culture, and spectacular sunsets. From luxury resorts to authentic local experiences, our Puerto Vallarta tours offer something for every traveler seeking the magic of Mexico's Pacific coast.
+                            Discover the charm of Puerto Vallarta with our customized vacation packages. Experience the perfect blend of beautiful beaches,
+                            vibrant culture, and spectacular sunsets. From luxury resorts to authentic local experiences, our Puerto Vallarta tours offer
+                            something for every traveler seeking the magic of Mexico's Pacific coast.
                         </p>
                     </div>
                 </div>
