--- a/index.html
+++ b/index.html
@@ -87,41 +87,48 @@
             <h2 class="text-center mb-4"><span style="color: purple;">Our Services</span></h2>
             <div class="row">
                 <div class="col-md-3 mb-3">
-                    <div class="card p-3 h-100" style="min-height: 320px; max-height: 320px;">
+                    <div class="card p-3 h-100" style="min-height: 380px; max-height: 380px;">
                         <div class="text-center mb-2">
                             <i class="fas fa-plane-departure fa-2x" style="color: purple;"></i>
                         </div>
                         <h5 class="card-title">Flight Booking</h5>
-                        <p class="card-text">Book flights to your favorite destinations with ease.</p>
+                        <p class="card-text">Book flights to your favorite destinations with Easy Travel and enjoy seamless booking,
+                             exclusive deals, and a hassle-free journey. Whether you're planning a quick getaway or a dream vacation,
+                             we make traveling effortless and affordable. Find the best routes, compare prices, and embark on your next adventure with confidence!.</p>
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
-                    <div class="card p-3 h-100" style="min-height: 320px; max-height: 320px;">
+                    <div class="card p-3 h-100" style="min-height: 380px; max-height: 380px;">
                         <div class="text-center mb-2">
                             <i class="fas fa-hotel fa-2x" style="color: purple;"></i>
                         </div>
                         <h5 class="card-title">Accommodation</h5>
-                        <p class="card-text">Find and book the best hotels at affordable prices.</p>
+                        <p class="card-text">Find and book the best hotels at affordable prices with ease. Explore a wide range of accommodations,
+                             from luxury resorts to budget-friendly stays, all tailored to your preferences. Compare prices, read reviews, and secure the perfect stay
+                             for your next adventure. Whether you're traveling for business or leisure, we make finding your ideal hotel simple and stress-free!.</p>
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
-                    <div class="card p-3 h-100" style="min-height: 320px; max-height: 320px;">
+                    <div class="card p-3 h-100" style="min-height: 380px; max-height: 380px;">
                         <div class="text-center mb-2">
                             <i class="fas fa-suitcase-rolling fa-2x" style="color: purple;"></i>
                         </div>
                         <h5 class="card-title">Tour Package</h5>
-                        <p class="card-text">Explore our curated tour packages for unforgettable experiences, please
-                            call 08002653595 for a quote</p>
+                        <p class="card-text">Explore our carefully curated tour packages designed to offer unforgettable experiences.
+                             Whether you're seeking a serene escape, an adventurous journey, or a cultural immersion, we have the perfect itinerary for you.
+                             Enjoy seamless planning, expert guides, and exclusive deals tailored to make your trip truly special.
+                             Call 08002653595 today for a personalized quote!</p>
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
-                    <div class="card p-3 h-100" style="min-height: 320px; max-height: 320px;">
+                    <div class="card p-3 h-100" style="min-height: 380px; max-height: 380px;">
                         <div class="text-center mb-2">
                             <i class="fas fa-shield-alt fa-2x" style="color: purple;"></i>
                         </div>
                         <h5 class="card-title">Travel Insurance</h5>
-                        <p class="card-text">Secure your trips with our comprehensive travel insurance plans, please
-                            call 08002653595 for a quote</p>
+                        <p class="card-text">Secure your trips with our comprehensive travel insurance plans, giving you peace of mind wherever you go.
+                            Whether traveling for business, leisure, or adventure, our coverage protects against disruptions, medical emergencies, and lost luggage.
+                            Travel worry-free with reliable, affordable protection—call 08002653595 today for a personalized quote!</p>
                     </div>
                 </div>
             </div>
