Reduced the text in the accommodation card

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <h5 class="card-title">Accommodation</h5>
                         <p class="card-text">Find and book the best hotels at affordable prices with ease. Explore a wide range of accommodations,
                              from luxury resorts to budget-friendly stays, all tailored to your preferences. Compare prices, read reviews, and secure the perfect stay
-                             for your next adventure. Whether you're traveling for business or leisure, we make finding your ideal hotel simple and stress-free!.</p>
+                             for your next adventure. Whether you're traveling for business or leisure, we make finding your ideal hotel simple!.</p>
                     </div>
                 </div>
                 <div class="col-md-3 mb-3">
